# ImgProc-modules

CLAHE/: CMakeLists.txt  clahe.cpp  main_test.cpp
Dehazing/: Dehazing-Impl.h  Dehazing-Mono.cpp  Dehazing.cpp  Dehazing.h  GuidedFilter.h
